# quantum_many_body_distance_learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
paper_figures/: figure_3.ipynb  figure_5.ipynb  figure_6.ipynb  figure_7.ipynb  figures_4_and_9.ipynb  sm_figure_1.ipynb  sm_figure_2.ipynb
paper_figures/utils/: __init__.py  aggregation.py
scripts/: download_data.py  download_data.sh
toy_examples/: tfim.ipynb  tfim_point_config.py
